--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-http-proxy": "^1.1.0",
     "request": "^2.83.0"
   }
 }
