--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "thesisprojectproxy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "proxy.js",
   "scripts": {
+    "start": "node proxy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-http-proxy": "^1.1.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
