(refactor) add axios, remove request and request promise

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "homepage": "https://github.com/Zacharygagnier/ThesisProjectProxy#readme",
   "dependencies": {
+    "axios": "^0.17.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "express-http-proxy": "^1.1.0",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2"
-  }
+    "express-http-proxy": "^1.1.0"
+  },
+  "devDependencies": {}
 }
